--- a/index.html
+++ b/index.html
@@ -440,23 +440,23 @@
     </section>
 
     <!-- Case Studies -->
-    <section id="case-study" class="hide">
+    <section id="case-study">
         <div class="container">
-            <div class="row">
-                <div class="col-6">
+            <div class="text-row">
+                <div>
                     <span class="dashed"></span>
                     <h4 class="section-sub-header">Case Study</h4>
                     <h3 class="section-header">BEXAR CASE STUDIES</h3>
                 </div>
-                <div class="col-6 case-btn d-flex justify-content-end">
+                <div class="case-btn">
                     <div class="align-self-center">
                         <button class=" mt-3">More services</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row mt-5 case-box w-100 m-auto">
-            <div class="col-3 gx-0">
+        <div class="mt-5 case-box w-100 m-auto">
+            <div class="">
                 <div class="case-img">
                     <div class="overflow-hidden">
                         <img src="assets/images/project-1.jpg" alt="">
@@ -473,7 +473,7 @@
                     <h3>ART INSTITUTE OF CHICAGO</h3>
                 </div>
             </div>
-            <div class="col-3 gx-0 ">
+            <div class=" ">
                 <div class="case-img ">
                     <div class="overflow-hidden">
                         <img src="assets/images/project-2.jpg" alt="">
@@ -490,7 +490,7 @@
                     <h3>ART INSTITUTE OF CHICAGO</h3>
                 </div>
             </div>
-            <div class="col-3 gx-0 ">
+            <div class=" ">
                 <div class="case-img ">
                     <div class="overflow-hidden">
                         <img src="assets/images/project-3.jpg" alt="">
@@ -507,7 +507,7 @@
                     <h3>ART INSTITUTE OF CHICAGO</h3>
                 </div>
             </div>
-            <div class="col-3 gx-0 ">
+            <div class=" ">
                 <div class="case-img ">
                     <div class="overflow-hidden">
                         <img src="assets/images/project-4.jpg" alt="">
@@ -532,7 +532,7 @@
     </section>
 
     <!-- Testimonial -->
-    <section id="testimonial" class="hide">
+    <section id="testimonial">
         <div class="container">
             <div class="row my-5">
                 <div class="col-7 m-auto text-center ">
