--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     <section id="testimonial">
         <div class="container">
             <div class="row my-5">
-                <div class="col-7 m-auto text-center ">
+                <div class="col-mg-7 col-lg-7 col-12 m-auto text-center ">
                     <div>
                         <span class="dashed"></span>
                         <h4 class="section-sub-header">Testimonials</h4>
@@ -544,7 +544,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-7 m-auto text-center ">
+                <div class="col-12 col-mg-7 col-lg-7 m-auto text-center ">
                     <div class="testi-slider">
                         <div class="text-back">
                             <img src="assets/images/client-1.jpg" alt="">
