--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                             <a class="nav-link" href="#about-me">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">Portfolio</a>
+                            <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#blog">Blog</a>
+                            <a class="nav-link" href="#latest">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -70,11 +70,11 @@
                                             <a class="nav-link" href="#about-me">About Us</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#portfolio">Portfolio</a>
+                                            <a class="nav-link" href="#services">Services</a>
                                         </li>
 
                                         <li class="nav-item">
-                                            <a class="nav-link" href="#blog">Blog</a>
+                                            <a class="nav-link" href="#latest">Blog</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="#contact">Contact</a>
